# warehouse

./: .pre-commit-config.yaml  .pylintrc  Makefile  dev_requirements.txt  main.py  pyproject.toml  readme.md  requirements.txt  warehouse.db
domain/: models.py  repositories.py  services.py  unit_of_work.py
infrastructure/: database.py  orm.py  repositories.py  unit_of_work.py
tests/test_domain/: test_models.py  test_services.py
