[project]
name = "otus-hw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pre-commit>=4.2.0",
    "pylint==3.3.5",
    "pytest==8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.10",
    "sqlalchemy==2.0.39",
]
